Clean up VAE config and construction

--- a/notebooks/train_vae.ipynb
+++ b/notebooks/train_vae.ipynb
@@ -49,16 +49,17 @@
     "config.model.latent_dim = 50\n",
     "config.model.learn_prior = False\n",
     "config.model.convolutional = False\n",
-    "config.model.act_fn = 'gelu'\n",
     "\n",
     "config.model.encoder = config_dict.ConfigDict()\n",
     "config.model.encoder.posterior = 'hetero-diag-normal'\n",
     "config.model.encoder.hidden_dims = [128, 256, 512]\n",
+    "config.model.encoder.act_fn = 'gelu'\n",
     "\n",
     "config.model.decoder = config_dict.ConfigDict()\n",
     "config.model.decoder.likelihood = 'iso-normal'\n",
     "# TODO: test these ^^^ !\n",
     "config.model.decoder.hidden_dims = [128, 256, 512]\n",
+    "config.model.decoder.act_fn = 'gelu'\n",
     "config.model.decoder.image_shape = {\n",
     "    'MNIST': (28, 28, 1),\n",
     "    'FashionMNIST': (28, 28, 1),\n",
@@ -146,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state = train_loop(model, state, config, rng, make_VAE_loss, make_VAE_eval, train_loader, valid_loader, {'mode': 'enabled'})"
+    "state = train_loop(model, state, config, rng, make_VAE_loss, make_VAE_eval, train_loader, valid_loader, {'mode': 'disabled'})"
    ]
   },
   {
