--- a/notebooks/train_vae.ipynb
+++ b/notebooks/train_vae.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "import src.models as models\n",
     "from src.models import make_VAE_loss, make_VAE_eval\n",
-    "from src.data import get_image_dataset, NumpyLoader\n",
+    "from src.data import get_image_dataset, NumpyLoader, METADATA\n",
     "from src.utils.training import TrainState, train_loop"
    ]
   },
@@ -60,14 +60,7 @@
     "# TODO: test these ^^^ !\n",
     "config.model.decoder.hidden_dims = [128, 256, 512]\n",
     "config.model.decoder.act_fn = 'gelu'\n",
-    "config.model.decoder.image_shape = {\n",
-    "    'MNIST': (28, 28, 1),\n",
-    "    'FashionMNIST': (28, 28, 1),\n",
-    "    'KMNIST': (28, 28, 1),\n",
-    "    'SVHN': (32, 32, 3),\n",
-    "    'CIFAR10': (32, 32, 3),\n",
-    "    'CIFAR100': (32, 32, 3),\n",
-    "}[config.dataset_name]\n",
+    "config.model.decoder.image_shape = METADATA['image_shape'][config.dataset_name]\n",
     "\n",
     "os.environ['WANDB_NOTEBOOK_NAME'] = 'train_vae.ipynb'\n",
     "# ^ W&B doesn't know how to handle VS Code notebooks.\n",
@@ -110,12 +103,11 @@
     "train_dataset, test_dataset, valid_dataset = get_image_dataset(\n",
     "    dataset_name=config.dataset_name,\n",
     "    valid_percent=config.valid_percent,\n",
-    "    flatten_img=not config.model.convolutional\n",
+    "    flatten_img=not config.model.convolutional,\n",
     ")\n",
     "train_loader = NumpyLoader(train_dataset, config.batch_size)\n",
-    "valid_loader = NumpyLoader(valid_dataset, int(60_000 * config.valid_percent))\n",
-    "# test_loader = NumpyLoader(test_dataset, 10_000)\n",
-    "# TODO: get rid of magic numbers ^"
+    "valid_loader = NumpyLoader(valid_dataset, int(METADATA['num_train'][config.dataset_name] * config.valid_percent))\n",
+    "test_loader = NumpyLoader(test_dataset, METADATA['num_test'][config.dataset_name])"
    ]
   },
   {
@@ -147,7 +139,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state = train_loop(model, state, config, rng, make_VAE_loss, make_VAE_eval, train_loader, valid_loader, {'mode': 'disabled'})"
+    "state = train_loop(\n",
+    "    model, state, config, rng, make_VAE_loss, make_VAE_eval, train_loader, valid_loader,\n",
+    "    # test_loader,\n",
+    "    # wandb_kwargs={'mode': 'offline'},\n",
+    ")"
    ]
   },
   {
