--- a/notebooks/train_vae.ipynb
+++ b/notebooks/train_vae.ipynb
@@ -36,34 +36,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.environ['WANDB_NOTEBOOK_NAME'] = 'train_vae.ipynb'\n",
+    "# ^ W&B doesn't know how to handle VS Code notebooks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "config = config_dict.ConfigDict()\n",
     "\n",
     "config.dataset_name = 'MNIST'\n",
     "config.valid_percent = 0.1\n",
-    "config.learning_rate = 3e-3\n",
-    "config.epochs = 30\n",
     "config.batch_size = 512\n",
+    "\n",
+    "config.learning_rate = 1e-4\n",
+    "config.peak_learning_rate = 3 * config.learning_rate\n",
+    "config.final_learning_rate = 0.1 * config.learning_rate\n",
+    "config.peak_lr_percent = 0.2\n",
+    "config.weight_decay = 1e-4\n",
+    "config.epochs = 100\n",
     "\n",
     "config.model_name = 'VAE'\n",
     "config.model = config_dict.ConfigDict()\n",
-    "config.model.latent_dim = 50\n",
+    "config.model.latent_dim = 128\n",
     "config.model.learn_prior = False\n",
-    "config.model.convolutional = False\n",
+    "config.model.convolutional = True\n",
     "\n",
     "config.model.encoder = config_dict.ConfigDict()\n",
     "config.model.encoder.posterior = 'hetero-diag-normal'\n",
-    "config.model.encoder.hidden_dims = [128, 256, 512]\n",
+    "config.model.encoder.hidden_dims = [64, 128, 256]\n",
     "config.model.encoder.act_fn = 'gelu'\n",
     "\n",
     "config.model.decoder = config_dict.ConfigDict()\n",
     "config.model.decoder.likelihood = 'iso-normal'\n",
-    "# TODO: test these ^^^ !\n",
-    "config.model.decoder.hidden_dims = [128, 256, 512]\n",
+    "config.model.decoder.hidden_dims = list(reversed(config.model.encoder.hidden_dims))\n",
+    "# config.model.decoder.hidden_dims = [32, 64, 128]\n",
     "config.model.decoder.act_fn = 'gelu'\n",
     "config.model.decoder.image_shape = METADATA['image_shape'][config.dataset_name]\n",
-    "\n",
-    "os.environ['WANDB_NOTEBOOK_NAME'] = 'train_vae.ipynb'\n",
-    "# ^ W&B doesn't know how to handle VS Code notebooks.\n",
     "\n",
     "wandb.login()"
    ]
@@ -106,8 +118,8 @@
     "    flatten_img=not config.model.convolutional,\n",
     ")\n",
     "train_loader = NumpyLoader(train_dataset, config.batch_size)\n",
-    "valid_loader = NumpyLoader(valid_dataset, int(METADATA['num_train'][config.dataset_name] * config.valid_percent))\n",
-    "test_loader = NumpyLoader(test_dataset, METADATA['num_test'][config.dataset_name])"
+    "valid_loader = NumpyLoader(valid_dataset, config.batch_size)\n",
+    "test_loader = NumpyLoader(test_dataset, config.batch_size)"
    ]
   },
   {
@@ -125,10 +137,17 @@
     "model_state, params = variables.pop('params')\n",
     "del variables\n",
     "\n",
+    "total_steps = config.epochs * len(train_loader)\n",
+    "lr_schedule = optax.warmup_cosine_decay_schedule(\n",
+    "    init_value=config.learning_rate, peak_value=config.peak_learning_rate,\n",
+    "    warmup_steps=int(total_steps * config.peak_lr_percent),\n",
+    "    decay_steps=total_steps, end_value=config.final_learning_rate\n",
+    ")\n",
+    "\n",
     "state = TrainState.create(\n",
     "    apply_fn=model.apply,\n",
     "    params=params,\n",
-    "    tx=optax.adamw(config.learning_rate),\n",
+    "    tx=optax.adamw(lr_schedule, weight_decay=config.weight_decay),\n",
     "    model_state=model_state\n",
     ")"
    ]
