For real, rename 'valid' in the context of validation data to 'val'.

--- a/notebooks/train_vae.ipynb
+++ b/notebooks/train_vae.ipynb
@@ -49,7 +49,7 @@
     "config = config_dict.ConfigDict()\n",
     "\n",
     "config.dataset_name = 'MNIST'\n",
-    "config.valid_percent = 0.1\n",
+    "config.val_percent = 0.1\n",
     "config.batch_size = 512\n",
     "\n",
     "config.learning_rate = 1e-4\n",
@@ -112,13 +112,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset, test_dataset, valid_dataset = get_image_dataset(\n",
+    "train_dataset, test_dataset, val_dataset = get_image_dataset(\n",
     "    dataset_name=config.dataset_name,\n",
-    "    valid_percent=config.valid_percent,\n",
+    "    val_percent=config.val_percent,\n",
     "    flatten_img=not config.model.convolutional,\n",
     ")\n",
     "train_loader = NumpyLoader(train_dataset, config.batch_size)\n",
-    "valid_loader = NumpyLoader(valid_dataset, config.batch_size)\n",
+    "val_loader = NumpyLoader(val_dataset, config.batch_size)\n",
     "test_loader = NumpyLoader(test_dataset, config.batch_size)"
    ]
   },
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "state = train_loop(\n",
-    "    model, state, config, rng, make_VAE_loss, make_VAE_eval, train_loader, valid_loader,\n",
+    "    model, state, config, rng, make_VAE_loss, make_VAE_eval, train_loader, val_loader,\n",
     "    # test_loader,\n",
     "    # wandb_kwargs={'mode': 'offline'},\n",
     ")"
