Simplify VAE training notebook

--- a/notebooks/train_vae.ipynb
+++ b/notebooks/train_vae.ipynb
@@ -20,14 +20,12 @@
     "import logging\n",
     "\n",
     "from jax import random\n",
-    "import optax\n",
     "import wandb\n",
-    "from ml_collections import config_dict\n",
     "\n",
-    "import src.models as models\n",
     "from src.models import make_VAE_loss, make_VAE_eval\n",
-    "from src.data import get_image_dataset, NumpyLoader, METADATA\n",
-    "from src.utils.training import TrainState, train_loop"
+    "from src.data import get_image_dataset, NumpyLoader\n",
+    "from src.utils.training import setup_training, train_loop\n",
+    "from experiments.vae_mnist_default import get_config"
    ]
   },
   {
@@ -37,45 +35,7 @@
    "outputs": [],
    "source": [
     "os.environ['WANDB_NOTEBOOK_NAME'] = 'train_vae.ipynb'\n",
-    "# ^ W&B doesn't know how to handle VS Code notebooks."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = config_dict.ConfigDict()\n",
-    "\n",
-    "config.dataset_name = 'MNIST'\n",
-    "config.val_percent = 0.1\n",
-    "config.batch_size = 512\n",
-    "\n",
-    "config.learning_rate = 1e-4\n",
-    "config.peak_learning_rate = 3 * config.learning_rate\n",
-    "config.final_learning_rate = 0.1 * config.learning_rate\n",
-    "config.peak_lr_percent = 0.2\n",
-    "config.weight_decay = 1e-4\n",
-    "config.epochs = 100\n",
-    "\n",
-    "config.model_name = 'VAE'\n",
-    "config.model = config_dict.ConfigDict()\n",
-    "config.model.latent_dim = 128\n",
-    "config.model.learn_prior = False\n",
-    "config.model.convolutional = True\n",
-    "\n",
-    "config.model.encoder = config_dict.ConfigDict()\n",
-    "config.model.encoder.posterior = 'hetero-diag-normal'\n",
-    "config.model.encoder.hidden_dims = [64, 128, 256]\n",
-    "config.model.encoder.act_fn = 'gelu'\n",
-    "\n",
-    "config.model.decoder = config_dict.ConfigDict()\n",
-    "config.model.decoder.likelihood = 'iso-normal'\n",
-    "config.model.decoder.hidden_dims = list(reversed(config.model.encoder.hidden_dims))\n",
-    "# config.model.decoder.hidden_dims = [32, 64, 128]\n",
-    "config.model.decoder.act_fn = 'gelu'\n",
-    "config.model.decoder.image_shape = METADATA['image_shape'][config.dataset_name]\n",
+    "# ^ W&B doesn't know how to handle VS Code notebooks.\n",
     "\n",
     "wandb.login()"
    ]
@@ -112,10 +72,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "config = get_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_dataset, test_dataset, val_dataset = get_image_dataset(\n",
     "    dataset_name=config.dataset_name,\n",
     "    val_percent=config.val_percent,\n",
-    "    flatten_img=not config.model.convolutional,\n",
+    "    flatten_img=config.model.architecture == 'MLP',\n",
     ")\n",
     "train_loader = NumpyLoader(train_dataset, config.batch_size)\n",
     "val_loader = NumpyLoader(val_dataset, config.batch_size)\n",
@@ -128,28 +97,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_cls = getattr(models, config.model_name)\n",
-    "model = model_cls(**config.model.to_dict())\n",
-    "\n",
-    "init_rng, rng = random.split(rng)\n",
+    "setup_rng, rng = random.split(rng)\n",
     "init_data = train_dataset[0][0]\n",
-    "variables = model.init(init_rng, init_data, rng)\n",
-    "model_state, params = variables.pop('params')\n",
-    "del variables\n",
     "\n",
-    "total_steps = config.epochs * len(train_loader)\n",
-    "lr_schedule = optax.warmup_cosine_decay_schedule(\n",
-    "    init_value=config.learning_rate, peak_value=config.peak_learning_rate,\n",
-    "    warmup_steps=int(total_steps * config.peak_lr_percent),\n",
-    "    decay_steps=total_steps, end_value=config.final_learning_rate\n",
-    ")\n",
-    "\n",
-    "state = TrainState.create(\n",
-    "    apply_fn=model.apply,\n",
-    "    params=params,\n",
-    "    tx=optax.adamw(lr_schedule, weight_decay=config.weight_decay),\n",
-    "    model_state=model_state\n",
-    ")"
+    "model, state = setup_training(config, setup_rng, init_data)"
    ]
   },
   {
@@ -161,7 +112,10 @@
     "state = train_loop(\n",
     "    model, state, config, rng, make_VAE_loss, make_VAE_eval, train_loader, val_loader,\n",
     "    # test_loader,\n",
-    "    # wandb_kwargs={'mode': 'offline'},\n",
+    "    wandb_kwargs={\n",
+    "        # 'mode': 'offline',    \n",
+    "        # 'notes': '',\n",
+    "    },\n",
     ")"
    ]
   },
