Make shear in x and shear in y separate transformations

--- a/tests/test_transformed_datasets.ipynb
+++ b/tests/test_transformed_datasets.ipynb
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "η = jnp.array([1., 0., 0., 0., 0., 0.])\n",
+    "η = jnp.array([1., 0., 0., 0., 0., 0., 0.])\n",
     "tx_mnist, _, _ = get_image_dataset('MNIST', η_min=η, η_max=η)\n",
     "x = tx_mnist[1][0]\n",
     "plt.imshow(x)"
@@ -128,7 +128,7 @@
     }
    ],
    "source": [
-    "η=jnp.array([0., 0., np.pi, 0., 0., 0.])\n",
+    "η=jnp.array([0., 0., np.pi, 0., 0., 0., 0.])\n",
     "rot_mnist, _, _ = get_image_dataset('MNIST', η_min=η, η_max=η)\n",
     "x = rot_mnist[1][0]\n",
     "plt.imshow(x)"
@@ -180,7 +180,7 @@
     }
    ],
    "source": [
-    "η=jnp.array([0., 0., 0., 0., 0., 0.])\n",
+    "η=jnp.array([0., 0., 0., 0., 0., 0., 0.])\n",
     "cifar, _, _ = get_image_dataset('CIFAR10', η_min=η, η_max=η)\n",
     "x = cifar[0][0]\n",
     "plt.imshow(x)"
@@ -232,7 +232,7 @@
     }
    ],
    "source": [
-    "η=jnp.array([0., 0., np.pi, 0., 0., 0.])\n",
+    "η=jnp.array([0., 0., np.pi, 0., 0., 0., 0.])\n",
     "rotcifar, _, _ = get_image_dataset('CIFAR10', η_min=η, η_max=η)\n",
     "x = rotcifar[0][0]\n",
     "plt.imshow(x)"
