swap tfp's jax substrate for distrax!

--- a/notebooks/train_vae.ipynb
+++ b/notebooks/train_vae.ipynb
@@ -113,7 +113,7 @@
     "    model, state, config, rng, make_VAE_loss, make_VAE_eval, train_loader, val_loader,\n",
     "    # test_loader,\n",
     "    wandb_kwargs={\n",
-    "        # 'mode': 'offline',    \n",
+    "        'mode': 'offline',\n",
     "        # 'notes': '',\n",
     "    },\n",
     ")"
