Rename eta_max, eta_min -> eta_high, eta_low

--- a/tests/test_transformed_datasets.ipynb
+++ b/tests/test_transformed_datasets.ipynb
@@ -42,7 +42,7 @@
    ],
    "source": [
     "mnist, _, _ = get_image_dataset(\n",
-    "    'MNIST', η_min=None, η_max=None,\n",
+    "    'MNIST', η_low=None, η_high=None,\n",
     ")\n",
     "x = mnist[1][0]\n",
     "plt.imshow(x)"
@@ -86,7 +86,7 @@
    ],
    "source": [
     "η = jnp.array([1., 0., 0., 0., 0., 0., 0.])\n",
-    "tx_mnist, _, _ = get_image_dataset('MNIST', η_min=η, η_max=η)\n",
+    "tx_mnist, _, _ = get_image_dataset('MNIST', η_low=η, η_high=η)\n",
     "x = tx_mnist[1][0]\n",
     "plt.imshow(x)"
    ]
@@ -129,7 +129,7 @@
    ],
    "source": [
     "η=jnp.array([0., 0., np.pi, 0., 0., 0., 0.])\n",
-    "rot_mnist, _, _ = get_image_dataset('MNIST', η_min=η, η_max=η)\n",
+    "rot_mnist, _, _ = get_image_dataset('MNIST', η_low=η, η_high=η)\n",
     "x = rot_mnist[1][0]\n",
     "plt.imshow(x)"
    ]
@@ -181,7 +181,7 @@
    ],
    "source": [
     "η=jnp.array([0., 0., 0., 0., 0., 0., 0.])\n",
-    "cifar, _, _ = get_image_dataset('CIFAR10', η_min=η, η_max=η)\n",
+    "cifar, _, _ = get_image_dataset('CIFAR10', η_low=η, η_high=η)\n",
     "x = cifar[0][0]\n",
     "plt.imshow(x)"
    ]
@@ -233,7 +233,7 @@
    ],
    "source": [
     "η=jnp.array([0., 0., np.pi, 0., 0., 0., 0.])\n",
-    "rotcifar, _, _ = get_image_dataset('CIFAR10', η_min=η, η_max=η)\n",
+    "rotcifar, _, _ = get_image_dataset('CIFAR10', η_low=η, η_high=η)\n",
     "x = rotcifar[0][0]\n",
     "plt.imshow(x)"
    ]
