--- a/notebooks/train_vae.ipynb
+++ b/notebooks/train_vae.ipynb
@@ -46,23 +46,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fix for annoying \"WARNING:root:The use of `check_types` is deprecated and does not have any effect.\"\n",
-    "# error message produced by tfp.\n",
-    "logger = logging.getLogger('root')\n",
-    "\n",
-    "class CheckTypesFilter(logging.Filter):\n",
-    "    def filter(self, record):\n",
-    "        return 'check_types' not in record.getMessage()\n",
-    "\n",
-    "logger.addFilter(CheckTypesFilter())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "rng = random.PRNGKey(0)"
    ]
   },
@@ -113,8 +96,9 @@
     "    model, state, config, rng, make_VAE_loss, make_VAE_eval, train_loader, val_loader,\n",
     "    # test_loader,\n",
     "    wandb_kwargs={\n",
-    "        'mode': 'offline',\n",
+    "        # 'mode': 'offline',\n",
     "        # 'notes': '',\n",
+    "        # 'tags': ['vae_testing'],\n",
     "    },\n",
     ")"
    ]
@@ -146,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
