--- a/notebooks/train_vae.ipynb
+++ b/notebooks/train_vae.ipynb
@@ -66,8 +66,7 @@
    "source": [
     "train_dataset, test_dataset, val_dataset = get_image_dataset(\n",
     "    dataset_name=config.dataset_name,\n",
-    "    val_percent=config.val_percent,\n",
-    "    flatten_img=config.model.architecture == 'MLP',\n",
+    "    **(config.get('dataset', {})),\n",
     ")\n",
     "train_loader = NumpyLoader(train_dataset, config.batch_size)\n",
     "val_loader = NumpyLoader(val_dataset, config.batch_size)\n",
@@ -96,7 +95,7 @@
     "    model, state, config, rng, make_VAE_loss, make_VAE_eval, train_loader, val_loader,\n",
     "    # test_loader,\n",
     "    wandb_kwargs={\n",
-    "        # 'mode': 'offline',\n",
+    "        'mode': 'offline',\n",
     "        # 'notes': '',\n",
     "        # 'tags': ['vae_testing'],\n",
     "    },\n",
