Add random seed to configs

--- a/notebooks/train_inv_vae.ipynb
+++ b/notebooks/train_inv_vae.ipynb
@@ -46,16 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng = random.PRNGKey(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = get_config()"
+    "config = get_config()\n",
+    "rng = random.PRNGKey(config.random_seed)"
    ]
   },
   {
@@ -96,7 +88,8 @@
     "    # test_loader,\n",
     "    wandb_kwargs={\n",
     "        # 'mode': 'offline',\n",
-    "        # 'notes': '',\n",
+    "        'notes': 'Comparing learning w/ and w/o invariances for different amounts of transformation in the data.',\n",
+    "        'tags': ['inv_vae_testing', 'no invariance', 'no transformation'],\n",
     "    },\n",
     ")"
    ]
