--- a/notebooks/train_vae.ipynb
+++ b/notebooks/train_vae.ipynb
@@ -46,16 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng = random.PRNGKey(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = get_config()"
+    "config = get_config()\n",
+    "rng = random.PRNGKey(config.random_seed)"
    ]
   },
   {
@@ -95,9 +87,9 @@
     "    model, state, config, rng, make_VAE_loss, make_VAE_eval, train_loader, val_loader,\n",
     "    # test_loader,\n",
     "    wandb_kwargs={\n",
-    "        'mode': 'offline',\n",
+    "        # 'mode': 'offline',\n",
     "        # 'notes': '',\n",
-    "        # 'tags': ['vae_testing'],\n",
+    "        'tags': ['reference_perf', 'small_quick_model'],\n",
     "    },\n",
     ")"
    ]
