--- a/notebooks/train_inv_vae.ipynb
+++ b/notebooks/train_inv_vae.ipynb
@@ -89,7 +89,7 @@
     "    wandb_kwargs={\n",
     "        # 'mode': 'offline',\n",
     "        'notes': 'Comparing learning w/ and w/o invariances for different amounts of transformation in the data.',\n",
-    "        'tags': ['inv_vae_testing', 'no invariance', 'no transformation'],\n",
+    "        'tags': ['inv_vae_testing', 'invariance full', 'transformation π/2'],\n",
     "    },\n",
     ")"
    ]
