--- a/notebooks/vae.ipynb
+++ b/notebooks/vae.ipynb
@@ -18,7 +18,9 @@
     "\n",
     "from ml_collections import config_dict\n",
     "import jax.random as random\n",
-    "import jax.numpy as jnp\n",
+    "jnp.log(jnp.exp(1) - 1.0)\n",
+    "# TODO: figure out why we get CUDA failures this ^ isn't here. \n",
+    "\n",
     "from absl import logging\n",
     "\n",
     "from src.utils.training import setup_model, get_dataset_splits, train_loop\n",
