--- a/notebooks/augmented_dsprites_example.ipynb
+++ b/notebooks/augmented_dsprites_example.ipynb
@@ -39,7 +39,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-13 16:04:24.416425: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-09-13 16:43:08.257062: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-13 16:04:29.687040: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1960] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "2023-09-13 16:43:10.082299: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1960] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
       "Skipping registering GPU devices...\n"
      ]
     }
@@ -183,7 +183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1456504/1269198311.py:29: MatplotlibDeprecationWarning: The join function was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
+      "/tmp/ipykernel_1462277/1269198311.py:29: MatplotlibDeprecationWarning: The join function was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
       "  axes[0, col].get_shared_x_axes().join(\n"
      ]
     },
@@ -390,9 +390,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/brunokm/.pyenv/versions/3.11.3/envs/jax-learning-inv/lib/python3.11/site-packages/tensorflow_addons/utils/tfa_eol_msg.py:23: UserWarning: \n",
+      "\n",
+      "TensorFlow Addons (TFA) has ended development and introduction of new features.\n",
+      "TFA has entered a minimal maintenance and release mode until a planned end of life in May 2024.\n",
+      "Please modify downstream libraries to take dependencies from other repositories in our TensorFlow community (e.g. Keras, Keras-CV, and Keras-NLP). \n",
+      "\n",
+      "For more information see: https://github.com/tensorflow/addons/issues/2807 \n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from src.utils.input import get_data\n",
     "\n",
@@ -400,6 +416,10 @@
     "config.dataset = \"aug_dsprites\"\n",
     "config.batch_size = 512\n",
     "config.shuffle_buffer_size = 2\n",
+    "config.pp_train = f'value_range(-1, 1, 0, 1)|keep([\"image\"])'\n",
+    "config.pp_eval = f'value_range(-1, 1, 0, 1)|keep([\"image\", \"label_shape\"])'\n",
+    "config.repeat_after_batching = False\n",
+    "\n",
     "# These are no having any effect:\n",
     "config.train_split = 0.8\n",
     "config.val_split = 0.2\n",
