--- a/notebooks/augmented_dsprites_example.ipynb
+++ b/notebooks/augmented_dsprites_example.ipynb
@@ -45,7 +45,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-19 11:05:09.231677: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-09-19 12:15:58.205810: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-19 11:05:16.771418: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1960] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "2023-09-19 12:16:04.458852: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1960] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
       "Skipping registering GPU devices...\n"
      ]
     }
@@ -165,7 +165,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.utils.datasets.augmented_dsprites import extract_latents_from_example"
+    "from src.utils.datasets.augmented_dsprites import DspritesLatent\n",
+    "\n",
+    "\n",
+    "def extract_latents_from_example(example: dict):\n",
+    "    return DspritesLatent(\n",
+    "        value_orientation=float(example[\"value_orientation\"]),\n",
+    "        value_scale=float(example[\"value_scale\"]),\n",
+    "        value_x_position=float(example[\"value_x_position\"]),\n",
+    "        value_y_position=float(example[\"value_y_position\"]),\n",
+    "        label_shape=int(example[\"label_shape\"]),\n",
+    "    )"
    ]
   },
   {
@@ -201,7 +211,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1693793/1269198311.py:29: MatplotlibDeprecationWarning: The join function was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
+      "/tmp/ipykernel_1737125/1269198311.py:29: MatplotlibDeprecationWarning: The join function was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
       "  axes[0, col].get_shared_x_axes().join(\n"
      ]
     },
@@ -434,9 +444,8 @@
     "config.dataset = \"aug_dsprites\"\n",
     "config.batch_size = 512\n",
     "config.shuffle_buffer_size = 2\n",
-    "config.pp_train = f'value_range(-1, 1, 0, 1)|keep([\"image\"])'\n",
-    "config.pp_eval = f'value_range(-1, 1, 0, 1)|keep([\"image\", \"label_shape\"])'\n",
-    "config.repeat_after_batching = False\n",
+    "config.pp_train = f'value_range(-1, 1)|keep([\"image\"])'\n",
+    "config.pp_eval = f'value_range(-1, 1)|keep([\"image\", \"label_shape\"])'\n",
     "\n",
     "# These are no having any effect:\n",
     "config.train_split = 0.8\n",
@@ -455,7 +464,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32.5 ms ± 1.68 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "33.1 ms ± 2.02 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
