Fix 'value_range' to be the right range

--- a/notebooks/augmented_dsprites_example.ipynb
+++ b/notebooks/augmented_dsprites_example.ipynb
@@ -444,8 +444,8 @@
     "config.dataset = \"aug_dsprites\"\n",
     "config.batch_size = 512\n",
     "config.shuffle_buffer_size = 2\n",
-    "config.pp_train = f'value_range(-1, 1)|keep([\"image\"])'\n",
-    "config.pp_eval = f'value_range(-1, 1)|keep([\"image\", \"label_shape\"])'\n",
+    "config.pp_train = f'value_range(-1, 1, 0, 1)|keep([\"image\"])'\n",
+    "config.pp_eval = f'value_range(-1, 1, 0, 1)|keep([\"image\", \"label_shape\"])'\n",
     "\n",
     "# These are no having any effect:\n",
     "config.train_split = 0.8\n",
