--- a/notebooks/proto_gen_model.ipynb
+++ b/notebooks/proto_gen_model.ipynb
@@ -197,7 +197,7 @@
     "    entity=\"invariance-learners\",\n",
     "    config=config.to_dict(),\n",
     "    mode=\"online\",\n",
-    "    notes=\"test code logging 2\",\n",
+    "    notes=\"\",\n",
     "    name=None,\n",
     "    settings=wandb.Settings(code_dir=\"../\"),\n",
     ")"
