--- a/notebooks/proto_gen_model.ipynb
+++ b/notebooks/proto_gen_model.ipynb
@@ -358,7 +358,7 @@
     "\n",
     "state = create_pgm_state(params, state_rng, config)\n",
     "\n",
-    "train_step, eval_step = make_pgm_train_and_eval(config, model)"
+    "train_step, eval_step = make_pgm_train_and_eval(model, config)"
    ]
   },
   {
