Update train scripts

--- a/notebooks/vae_mnist.ipynb
+++ b/notebooks/vae_mnist.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prototypical Generative Model (PGM) training"
+    "# VAE training"
    ]
   },
   {
@@ -299,7 +299,7 @@
     "\n",
     "state = create_vae_state(params, state_rng, config)\n",
     "\n",
-    "train_step, eval_step = make_vae_train_and_eval(model)\n",
+    "train_step, eval_step = make_vae_train_and_eval(model, config)\n",
     "x = next(deterministic_data.start_input_pipeline(val_ds))['image'][0]\n",
     "reconstruction_plot, sampling_plot = make_vae_plotting_fns(config, model, x)"
    ]
