Move most of plotting code outside of training script/notebook

--- a/notebooks/proto_gen_model.ipynb
+++ b/notebooks/proto_gen_model.ipynb
@@ -59,6 +59,7 @@
     "from experiments.configs.pgm_mnist import get_config\n",
     "from src.utils.input import get_data\n",
     "from src.models.proto_model import TransformationInferenceNet, create_canonicalizer_state, make_canonicalizer_train_and_eval\n",
+    "from src.utils.proto_plots import plot_proto_model_training_metrics\n",
     "from src.models.transform_gen_model import TransformationGenerativeNet, make_augment_generative_train_and_eval, create_augment_generative_state\n",
     "from src.models.utils import reset_metrics\n",
     "from src.utils.plotting import rescale_for_imshow\n",
@@ -536,92 +537,7 @@
     }
    ],
    "source": [
-    "colors = sns.color_palette(\"husl\", 3)\n",
-    "# plot the training history\n",
-    "steps, loss, x_mse, lr_inf, lr_σ = history.collect(\n",
-    "    \"steps\",\n",
-    "    \"loss\",\n",
-    "    \"x_mse\",\n",
-    "    \"lr_inf\",\n",
-    "    \"lr_σ\",\n",
-    ")\n",
-    "sigma = history.collect(\"σ\")\n",
-    "augment_bounds_mult = history.collect(\"augment_bounds_mult\")\n",
-    "steps_test, loss_test, x_mse_test = history.collect(\n",
-    "    \"steps\", \"loss_test\", \"x_mse_test\"\n",
-    ")\n",
-    "\n",
-    "label_paired_image_mse = history.collect(\"label_paired_image_mse_test\")\n",
-    "\n",
-    "n_plots = 5\n",
-    "fig, axs = plt.subplots(\n",
-    "    n_plots, 1, figsize=(15, n_plots * 3.0), dpi=300, sharex=True\n",
-    ")\n",
-    "\n",
-    "axs[0].plot(steps, loss, label=f\"train {loss[-1]:.4f}\", color=colors[0])\n",
-    "axs[0].plot(steps_test, loss_test, label=f\"test  {loss_test[-1]:.4f}\", color=colors[1])\n",
-    "axs[0].legend()\n",
-    "# axs[0].set_yscale(\"log\")\n",
-    "axs[0].set_title(\"Loss\")\n",
-    "\n",
-    "axs[1].plot(steps, x_mse, label=f\"train {x_mse[-1]:.4f}\", color=colors[0])\n",
-    "axs[1].plot(steps_test, x_mse_test, label=f\"test  {x_mse_test[-1]:.4f}\", color=colors[1])\n",
-    "axs[1].legend()\n",
-    "axs[1].set_title(\"x_mse\")\n",
-    "\n",
-    "axs[2].plot(\n",
-    "    steps_test,\n",
-    "    label_paired_image_mse,\n",
-    "    label=f\"test {label_paired_image_mse[-1]:.4f}\",\n",
-    "    color=colors[0],\n",
-    ")\n",
-    "axs[2].legend()\n",
-    "axs[2].set_title(\"label_paired_image_mse\")\n",
-    "\n",
-    "axs[3].plot(steps, sigma, color=colors[1])\n",
-    "axs[3].set_yscale(\"log\")\n",
-    "axs[3].set_title(\"σ\")\n",
-    "\n",
-    "# Schedule axis:\n",
-    "host = axs[-1]\n",
-    "par1 = host.twinx()\n",
-    "# par2 = host.twinx()\n",
-    "\n",
-    "p1, = host.plot(steps, lr_inf, \"--\", label=f\"inf   {lr_inf[-1]:.4f}\", color=colors[0])\n",
-    "p2, = host.plot(steps, lr_σ, \"--\", label=f\"σ    {lr_σ[-1]:.4f}\", color=colors[1])\n",
-    "p3, = par1.plot(\n",
-    "    steps,\n",
-    "    augment_bounds_mult,\n",
-    "    label=f\"augment_bounds_mult {augment_bounds_mult[-1]:.4f}\",\n",
-    "    color=colors[2]\n",
-    ")\n",
-    "lines = [p1, p2, p3]\n",
-    "host.legend(lines, [l.get_label() for l in lines])\n",
-    "\n",
-    "host.set_yscale(\"log\")\n",
-    "par1.set_yscale(\"log\")\n",
-    "# par2.set_yscale(\"log\")\n",
-    "\n",
-    "host.set_ylabel(f\"LR\")\n",
-    "# par1.set_ylabel(\"σ LR\")\n",
-    "par1.set_ylabel(\"Multipliers\")\n",
-    "\n",
-    "host.yaxis.label.set_color(p1.get_color())\n",
-    "par1.yaxis.label.set_color(p3.get_color())\n",
-    "# par2.yaxis.label.set_color(p3.get_color())\n",
-    "\n",
-    "tkw = dict(size=4, width=1.5)\n",
-    "host.tick_params(axis='y', colors=p1.get_color(), **tkw)\n",
-    "par1.tick_params(axis='y', colors=p3.get_color(), **tkw)\n",
-    "# par2.tick_params(axis='y', colors=p3.get_color(), **tkw)\n",
-    "\n",
-    "axs[-1].set_xlim(min(steps), max(steps))\n",
-    "axs[-1].set_xlabel(\"Steps\")\n",
-    "\n",
-    "for ax in axs:\n",
-    "    ax.grid(color=(0.9, 0.9, 0.9))\n",
-    "\n",
-    "plt.show()"
+    "plot_proto_model_training_metrics(history)"
    ]
   },
   {
