Add the rename changes to the notebooK

--- a/notebooks/proto_gen_model.ipynb
+++ b/notebooks/proto_gen_model.ipynb
@@ -58,9 +58,9 @@
     "from src.transformations import transform_image\n",
     "from experiments.configs.pgm_mnist import get_config\n",
     "from src.utils.input import get_data\n",
-    "from src.models.proto_model import TransformationInferenceNet, create_canonicalizer_state, make_canonicalizer_train_and_eval\n",
+    "from src.models.transformation_inference_model import TransformationInferenceNet, create_transformation_inference_state, make_transformation_inference_train_and_eval\n",
     "from src.utils.proto_plots import plot_proto_model_training_metrics\n",
-    "from src.models.transform_gen_model import TransformationGenerativeNet, make_augment_generative_train_and_eval, create_augment_generative_state\n",
+    "from src.models.transform_generative_model import TransformationGenerativeNet, make_transformation_generative_train_and_eval, create_transformation_generative_state\n",
     "from src.models.utils import reset_metrics\n",
     "from src.utils.plotting import rescale_for_imshow\n",
     "from src.utils.training import custom_wandb_logger\n"
@@ -415,9 +415,9 @@
    "source": [
     "params = flax.core.freeze(variables[\"params\"])\n",
     "\n",
-    "canon_state = create_canonicalizer_state(params, canon_state_rng, config)\n",
+    "canon_state = create_transformation_inference_state(params, canon_state_rng, config)\n",
     "\n",
-    "train_step, eval_step = make_canonicalizer_train_and_eval(config, canon_model)"
+    "train_step, eval_step = make_transformation_inference_train_and_eval(config, canon_model)"
    ]
   },
   {
@@ -762,9 +762,9 @@
    "source": [
     "gen_params = flax.core.freeze(variables[\"params\"])\n",
     "\n",
-    "gen_state = create_augment_generative_state(gen_params, gen_state_rng, config)\n",
+    "gen_state = create_transformation_generative_state(gen_params, gen_state_rng, config)\n",
     "\n",
-    "train_step, eval_step = make_augment_generative_train_and_eval(config, gen_model, canon_function=canon_function)"
+    "train_step, eval_step = make_transformation_generative_train_and_eval(config, gen_model, canon_function=canon_function)"
    ]
   },
   {
