--- a/notebooks/proto_gen_model.ipynb
+++ b/notebooks/proto_gen_model.ipynb
@@ -9,15 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "2023-10-09 17:38:00.491431: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "/home/brunokm/.pyenv/versions/3.11.3/envs/jax-learning-inv/lib/python3.11/site-packages/tensorflow_addons/utils/tfa_eol_msg.py:23: UserWarning: \n",
+      "\n",
+      "TensorFlow Addons (TFA) has ended development and introduction of new features.\n",
+      "TFA has entered a minimal maintenance and release mode until a planned end of life in May 2024.\n",
+      "Please modify downstream libraries to take dependencies from other repositories in our TensorFlow community (e.g. Keras, Keras-CV, and Keras-NLP). \n",
+      "\n",
+      "For more information see: https://github.com/tensorflow/addons/issues/2807 \n",
+      "\n",
+      "  warnings.warn(\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1696869482.084638 2086659 tfrt_cpu_pjrt_client.cc:349] TfrtCpuClient created.\n"
      ]
     }
    ],
@@ -68,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,82 +106,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "Finishing last run (ID:a5rw27fm) before initializing another..."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run <strong style=\"color:#cdcd00\">different-snowball-317</strong> at: <a href='https://wandb.ai/invariance-learners/iclr2024experiments/runs/a5rw27fm' target=\"_blank\">https://wandb.ai/invariance-learners/iclr2024experiments/runs/a5rw27fm</a><br/> View job at <a href='https://wandb.ai/invariance-learners/iclr2024experiments/jobs/QXJ0aWZhY3RDb2xsZWN0aW9uOjk4MTAyOTMx/version_details/v34' target=\"_blank\">https://wandb.ai/invariance-learners/iclr2024experiments/jobs/QXJ0aWZhY3RDb2xsZWN0aW9uOjk4MTAyOTMx/version_details/v34</a><br/>Synced 4 W&B file(s), 0 media file(s), 2 artifact file(s) and 0 other file(s)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find logs at: <code>./wandb/run-20231006_114047-a5rw27fm/logs</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Successfully finished last run (ID:a5rw27fm). Initializing new run:<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5dce92ed9c6042a79616b1675270c911",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.01111234550157355, max=1.0)…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mbrunokm\u001b[0m (\u001b[33minvariance-learners\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
     },
     {
      "data": {
@@ -201,7 +144,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/home/brunokm/projects/learning-invariances/notebooks/wandb/run-20231006_114049-a9g91icp</code>"
+       "Run data is saved locally in <code>/home/brunokm/projects/learning-invariances/notebooks/wandb/run-20231009_173804-6hl96dgd</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -213,7 +156,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/invariance-learners/iclr2024experiments/runs/a9g91icp' target=\"_blank\">spring-pyramid-318</a></strong> to <a href='https://wandb.ai/invariance-learners/iclr2024experiments' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/invariance-learners/iclr2024experiments/runs/6hl96dgd' target=\"_blank\">proud-forest-334</a></strong> to <a href='https://wandb.ai/invariance-learners/iclr2024experiments' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -237,7 +180,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/invariance-learners/iclr2024experiments/runs/a9g91icp' target=\"_blank\">https://wandb.ai/invariance-learners/iclr2024experiments/runs/a9g91icp</a>"
+       " View run at <a href='https://wandb.ai/invariance-learners/iclr2024experiments/runs/6hl96dgd' target=\"_blank\">https://wandb.ai/invariance-learners/iclr2024experiments/runs/6hl96dgd</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -261,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +230,7 @@
        "1"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -307,22 +250,18 @@
      "text": [
       "INFO:absl:Load dataset info from /home/brunokm/tensorflow_datasets/mnist/3.0.1\n",
       "INFO:absl:Fields info.[citation, splits, supervised_keys, module_name] from disk and from code do not match. Keeping the one from code.\n",
-      "INFO:absl:Reusing dataset mnist (/home/brunokm/tensorflow_datasets/mnist/3.0.1)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "INFO:absl:Reusing dataset mnist (/home/brunokm/tensorflow_datasets/mnist/3.0.1)\n",
+      "2023-10-09 17:38:07.750481: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1960] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n",
       "INFO:absl:Constructing tf.data.Dataset mnist for split _EvenSplit(split='train[10000:]', index=0, count=1, drop_remainder=False), from /home/brunokm/tensorflow_datasets/mnist/3.0.1\n",
       "INFO:absl:Features before preprocessing: {'image': 'uint8[28, 28, 1]', 'label': 'int64[]', 'rng': 'int32[2]'}\n",
       "INFO:absl:Features after op ValueRange(vmin=-1, vmax=1, in_min=0, in_max=255.0, clip_values=False, key='image', key_result=None):\n",
       "{'image': 'float32[28, 28, 1]', 'label': 'int64[]', 'rng': 'int32[2]'}\n",
       "INFO:absl:Features after op RandomRotate(θ_min=-3.141592653589793, θ_max=3.141592653589793, fill_mode='nearest', fill_value=-1, key='image', key_result=None, rng_key='rng'):\n",
       "{'image': 'float32[28, 28, 1]', 'label': 'int64[]', 'rng': 'int32[2]'}\n",
-      "INFO:absl:Features after op Keep(keys=['image']):\n",
-      "{'image': 'float32[28, 28, 1]'}\n",
-      "INFO:absl:Features after preprocessing: {'image': 'float32[28, 28, 1]'}\n",
+      "INFO:absl:Features after op Keep(keys=['image', 'label']):\n",
+      "{'image': 'float32[28, 28, 1]', 'label': 'int64[]'}\n",
+      "INFO:absl:Features after preprocessing: {'image': 'float32[28, 28, 1]', 'label': 'int64[]'}\n",
       "INFO:absl:Constructing tf.data.Dataset mnist for split _EvenSplit(split='train[:10000]', index=0, count=1, drop_remainder=False), from /home/brunokm/tensorflow_datasets/mnist/3.0.1\n",
       "INFO:absl:Features before preprocessing: {'image': 'uint8[28, 28, 1]', 'label': 'int64[]', 'rng': 'int32[2]'}\n",
       "INFO:absl:Features after op ValueRange(vmin=-1, vmax=1, in_min=0, in_max=255.0, clip_values=False, key='image', key_result=None):\n",
@@ -355,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -422,14 +361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 290s 29ms/step - invertibility_loss: 0.0039 - loss: 0.2885 - x_mse: 0.2885 - η_recon_loss: 0.2913 - invertibility_loss_test: 0.0039 - loss_test: 0.2876 - x_mse_test: 0.2876 - η_recon_loss_test: 0.2903 - label_paired_image_mse_test: 0.3316 1:09 - invertibility_loss: 0.0038 - loss: 0.2890 - x_mse: 0.2890 - η_recon_loss: 0.3002 - invertibility_loss_tes - ETA: 1:04 - invertibi - ETA: 53s - invertibility_loss: 0.0040 - loss: 0.2897 - x_mse: 0.2897 - η_recon_loss: 0.2978 - invertibility_loss_test: 0.0038 - loss_test: 0.2880 - x_mse_test: 0.2880 - η_recon_loss_test: 0.2970 - label_paired_image_mse_test: 0.3 - ETA: 53s - invertibility_loss: 0.0040 - loss: 0.2896 - x_mse: 0.2896 - η_recon_loss: 0.2982 - invertibility_loss_test: 0.0038 - loss_test: 0.2880 - x_mse_test: 0.2880 - η_recon_loss_test: 0.2970 - label_paired - ETA: 5s - invertibility_loss: 0.0038 - loss: 0.2888 - x_mse: 0.2888 - η_rec\n"
+      "  199/10000 [..............................] - ETA: 11:39 - invertibility_loss: 0.0019 - loss: 0.3604 - x_mse: 0.3604 - η_recon_loss: 0.5320 - invertibility_loss_test: 0.0020 - loss_test: 0.3642 - x_mse_test: 0.3642 - η_recon_loss_test: 0.5341 - label_paired_image_mse_test: 0.3923"
      ]
     }
    ],
@@ -459,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def canon_function(x, rng):\n",
+    "def prototype_function(x, rng):\n",
     "    η = canon_model.apply({\"params\": canon_final_state.params}, x, train=False).sample(seed=rng)\n",
     "    return η"
    ]
@@ -764,7 +703,7 @@
     "\n",
     "gen_state = create_transformation_generative_state(gen_params, gen_state_rng, config)\n",
     "\n",
-    "train_step, eval_step = make_transformation_generative_train_and_eval(config, gen_model, canon_function=canon_function)"
+    "train_step, eval_step = make_transformation_generative_train_and_eval(config, gen_model, canon_function=prototype_function)"
    ]
   },
   {
@@ -1094,7 +1033,7 @@
     "    # ηs_q = canon_functini(seed=random.PRNGKey(0), sample_shape=(n))\n",
     "    # η = ηs_q[jnp.argmax(log_probs)]\n",
     "    # TODO: is the argmaxing here necessary? Why not do it in the canon_function?\n",
-    "    η = canon_function(x, rng)\n",
+    "    η = prototype_function(x, rng)\n",
     "    η_aff_mat = gen_affine_matrix_no_shear(η)\n",
     "    η_aff_mat_inv = jnp.linalg.inv(η_aff_mat)\n",
     "    xhat = transform_image_with_affine_matrix(x, η_aff_mat_inv, order=config.interpolation_order)\n",
